<resources>
    <string name="app_name">How</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="title_activity_album">AlbumActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>

    <string name="player_name">I know</string>
    <string name="player_artist">By2</string>

    <string name="nav_title">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_album">Album</string>
    <string name="nav_artist">Artist</string>
    <string name="nav_song">Song</string>
    <string name="nav_queue">Queue</string>
    <string name="nav_online">Online</string>
    <string name="nav_name">Melo Chan</string>
    <string name="nav_info">a fan of jay.</string>
    <string name="complete_loading">Loading complete.</string>
    <string name="about">Author: MelodyJoke\nDate: 15.11.24\nVersion: 1.0.0</string>
    <string name="ok">ok</string>
    <string name="ticker">how is playing...</string>
    <string name="sharedcontent">To melody\'s homepage.</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_queue">QueueActivity</string>
    <string name="online_message">Loading list from internet...</string>
    <string name="local_message">Loading list from local file system...</string>
    <string name="download_message">Downloading song file...</string>
    <string name="download_picture">Downloading picture files...</string>
    <string name="download_error">Download failed</string>
    <string name="picpre_complete">Album and Artist pictures is prepared</string>
    <string name="picpre_error">Something wrong when preparing pictures</string>
    <string name="pause">Pause</string>
    <string name="action_mode">Mode</string>
    <string name="action_mode_repeat">Repeat</string>
    <string name="action_mode_single">Single Repeat</string>
    <string name="action_mode_random">Shuffle</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
