<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_song"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/nav_song" />
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_album_black_24dp"
            android:title="@string/nav_album" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_mic_none_black_24dp"
            android:title="@string/nav_artist" />
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_queue_music_black_24dp"
            android:title="@string/nav_queue" />
        <item
            android:id="@+id/nav_online"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/nav_online" />
    </group>

    <item android:title="@string/nav_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>